apps/lubelogger/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lubelogger
  namespace: lubelogger
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - cars.zeroenet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-lubelogger
          port: 80
